--- a/FinanceSystem/FinanceSystem/bin/FinanceSystem.dll.config
+++ b/FinanceSystem/FinanceSystem/bin/FinanceSystem.dll.config
@@ -8,11 +8,11 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-
-	<connectionStrings>
-    <add name="FinanceSystemDBContext" connectionString="data source=DESKTOP-4P9SBIB;initial catalog=FinanceSystem;persist security info=True;user id=Lavie;password=Lavie.1023;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  <connectionStrings>
+    <add name="FinanceSystemDBContext" connectionString="data source=DESKTOP-4P9SBIB;initial catalog=FinanceSystem;user id=Lavie;password=Lavie.1023;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
 
   </connectionStrings>
+	
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -25,6 +25,11 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+	  <pages validateRequest="false">
+		  <namespaces>
+			  <add namespace="System.Web.Helpers" />
+		  </namespaces>
+	  </pages>
   </system.web>
   <system.webServer>
     <modules>
