--- a/FinanceSystem/FinanceSystem/FinanceSystem.csproj
+++ b/FinanceSystem/FinanceSystem/FinanceSystem.csproj
@@ -229,6 +229,7 @@
     <Content Include="Content\css\StyleLogin1.css" />
     <Content Include="Content\css\styles.css" />
     <Content Include="Content\css\target.css" />
+    <Content Include="Content\Error\style.css" />
     <Content Include="Content\js\menu.js" />
     <Content Include="Content\js\Addimage.js" />
     <Content Include="Content\js\sortable.js" />
@@ -257,10 +258,11 @@
     <Content Include="Areas\Admin\Views\Shared\_LayoutAdmin.cshtml" />
     <Content Include="Areas\Admin\Views\UserInformations\Create.cshtml" />
     <Content Include="Areas\Admin\Views\UserInformations\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\UserInformations\Details.cshtml" />
     <Content Include="Areas\Admin\Views\UserInformations\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\UserInformations\Index.cshtml" />
     <Content Include="Areas\Admin\Views\UserInformations\_UserDetails.cshtml" />
+    <Content Include="Areas\Admin\Views\UserInformations\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\Error.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -304,7 +306,6 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Transactions\Create.cshtml" />
     <Content Include="Views\Transactions\Delete.cshtml" />
-    <Content Include="Views\Transactions\Details.cshtml" />
     <Content Include="Views\Transactions\Edit.cshtml" />
     <Content Include="Views\Transactions\FilterCategory.cshtml" />
     <Content Include="Views\Transactions\Index.cshtml" />
