--- a/FinanceSystem/FinanceSystem/Web.config
+++ b/FinanceSystem/FinanceSystem/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="FinanceSystemDBContext" connectionString="data source=DESKTOP-4P9SBIB;initial catalog=FinanceSystem;user id=Lavie;password=Lavie.1023;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+    <add name="FinanceSystemDBContext" connectionString="data source=DESKTOP-4P9SBIB;initial catalog=FinanceSystem;persist security info=True;user id=Lavie;password=Lavie.1023;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
 	
